<resources>
    <string name="app_name">KardioKingdom</string>
    <string name="registerTop">Register</string>
    <string name="regusername">Username</string>
    <string name="regemail">E-Mail</string>
    <string name="regpw">Password</string>
    <string name="registerBtn">Register</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="regloginbottom">Login</string>
    <string name="typeusername">Type your Username</string>
    <string name="typeemail">Type your E-Mail</string>
    <string name="typepw">Type your Password</string>
    <string name="logintop">Login</string>
    <string name="loginbtn">Login</string>
    <string name="noaccountyet">No Account yet?</string>
    <string name="logregbot">Register</string>
    <string name="fgtpw">Forgot Password?</string>
    <string name="changepw">Change Password</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="userprofileName">Name Name</string>
    <string name="savebtn">Save</string>
    <string name="deletebtn">Delete Account</string>
    <string name="logoutbtn">Logout</string>
    <string name="homemealplan">Meal Plan</string>
    <string name="homeexercise">Exercises</string>
    <string name="welcomeuser">Welcome, User!</string>


    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="settings">settings</string>
    <string name="Settings">Settings</string>
    <string name="Exercises">Exercises</string>
    <string name="Meal">Meal</string>
    <string name="Payment">Payment</string>
    <string name="usericon">usericon</string>
    <string name="logout">Logout</string>
    <string name="Music">Music</string>
    <string name="SongName">Starboy ft. Daft Punk</string>
    <string name="artist">The Weekend</string>
    <string name="admin">Admin</string>
    <string name="kardiokingdom">KardioKingdom</string>


    <string name="todo1">TODO</string>
    <string name="heading">Payment Details</string>
    <string name="cardNo">Card No</string>
    <string name="cvv">CVV</string>
    <string name="expiryDate">Expire Date</string>
    <string name="save1">Save</string>
    <string name="save2">Save</string>
    <string name="remove">Remove</string>
    <string name="editDetails">Edit</string>
    <string name="view">View</string>
    <string name="cardHolder">Card Holders\' Name</string>
    <string name="search">Search</string>
    <string name="editPayments">Edit Payments</string>


    <string name="maaaaa">User</string>
    <string name="User">Onali</string>
    <string name="x1">Exercise 01</string>
    <string name="x2">Exercise 02</string>
    <string name="x3">Exercise 03</string>
    <string name="x4">Exercise 04</string>
    <string name="ename">My Exercises</string>
    <string name="addE">Add</string>
    <string name="meal">Meal Plan</string>
    <string name="m1">Breakfast</string>
    <string name="m2">Snack</string>
    <string name="m3">Lunch</string>
    <string name="m4">Snack</string>
    <string name="m5">Dinner</string>
    <string name="button">Add</string>
    <string name="button2">Edit</string>
    <string name="t1">Add Meal</string>
    <string name="t2">Add Snack</string>
    <string name="t3">Add Lunch</string>
    <string name="t4">Add Snack</string>
    <string name="t5">Add Meal</string>
    <string name="t6">Add Snack</string>
    <string name="tt1">bread and fruit</string>
    <string name="tt2">Shakeology with armond milk</string>
    <string name="tt3">Green Salod</string>
    <string name="tt4">Veggies and Hummus</string>
    <string name="tt5">mini pizza</string>
    <string name="tt6">Veggies and cottage cheese</string>
    <string name="clear">Delete</string>
    <string name="save">Save</string>

    <string name="exercisestop">Exercises</string>

    <string name="addnew">Add New</string>
    <string name="add">Add</string>
    <string name="exname">Name of the Exercise</string>
    <string name="exdes">Description</string>
    <string name="workout">Workout</string>
    <string name="rest">Rest</string>
    <string name="rounds">Rounds</string>
    <string name="thumb">Thumbnail</string>
    <string name="Edit">ee</string>

</resources>
